<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.vedici.moviecatalogue.ui.MovieDetailActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/img_movie_backdrop"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:layout_margin="4dp"
				android:contentDescription="@string/movie_backdrop" />

			<ImageView
				android:id="@+id/img_movie_poster"
				android:layout_width="150dp"
				android:layout_height="200dp"
				android:layout_below="@+id/img_movie_backdrop"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="4dp"
				android:layout_marginStart="4dp"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/movie_poster" />

			<TextView
				android:id="@+id/tv_movie_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/img_movie_backdrop"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@+id/img_movie_poster"
				android:textSize="16sp"
				android:textStyle="bold"
				tools:text="Movie Title" />

			<TextView
				android:id="@+id/tv_movie_vote_average_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_title"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="4dp"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/img_movie_poster"
				android:text="@string/vote_average"
				android:textStyle="bold"
				tools:text="Movie Vote Average Text" />

			<TextView
				android:id="@+id/tv_movie_vote_average"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_title"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/tv_movie_vote_average_text"
				tools:text="Movie Vote Average" />

			<TextView
				android:id="@+id/tv_movie_vote_count_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_vote_average_text"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="4dp"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/img_movie_poster"
				android:text="@string/vote_count"
				android:textStyle="bold"
				tools:text="Movie Vote Count Text" />

			<TextView
				android:id="@+id/tv_movie_vote_count"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_vote_average"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/tv_movie_vote_count_text"
				tools:text="Movie Vote Count" />

			<TextView
				android:id="@+id/tv_movie_original_language_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_vote_count_text"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="4dp"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/img_movie_poster"
				android:text="@string/original_language"
				android:textStyle="bold"
				tools:text="Movie Original Language Text" />

			<TextView
				android:id="@+id/tv_movie_original_language"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_vote_count"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/tv_movie_original_language_text"
				tools:text="Movie Original Language" />

			<TextView
				android:id="@+id/tv_movie_release_date_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_original_language_text"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="4dp"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/img_movie_poster"
				android:text="@string/release_date"
				android:textStyle="bold"
				tools:text="Movie Release Date Text" />

			<TextView
				android:id="@+id/tv_movie_release_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_original_language"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_toEndOf="@id/tv_movie_release_date_text"
				tools:text="Movie Release Date" />

			<TextView
				android:id="@+id/tv_movie_overview_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/img_movie_poster"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_horizontal_margin"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				android:text="@string/overview"
				android:textStyle="bold"
				tools:text="Movie Overview Text" />

			<TextView
				android:id="@+id/tv_movie_overview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/tv_movie_overview_text"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginEnd="@dimen/activity_vertical_margin"
				android:layout_marginStart="@dimen/activity_vertical_margin"
				tools:text="Movie Overview" />
		</RelativeLayout>
	</ScrollView>
</android.support.constraint.ConstraintLayout>
