<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/cv_movie"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:layout_marginBottom="4dp"
	android:layout_marginLeft="8dp"
	android:layout_marginRight="8dp"
	android:layout_marginTop="4dp"
	card_view:cardCornerRadius="4dp">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="216dp"
		android:padding="8dp">

		<ImageView
			android:id="@+id/img_movie_poster"
			android:layout_width="150dp"
			android:layout_height="200dp"
			android:contentDescription="@string/movie_poster" />

		<TextView
			android:id="@+id/tv_movie_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:layout_marginLeft="@dimen/activity_vertical_margin"
			android:layout_marginRight="@dimen/activity_vertical_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:layout_toEndOf="@+id/img_movie_poster"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:text="Movie Title" />

		<TextView
			android:id="@+id/tv_movie_overview"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tv_movie_title"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:layout_marginLeft="@dimen/activity_vertical_margin"
			android:layout_marginRight="@dimen/activity_vertical_margin"
			android:layout_toEndOf="@id/img_movie_poster"
			android:ellipsize="end"
			android:maxLength="75"
			android:maxLines="2"
			tools:text="Movie Overview" />

		<TextView
			android:id="@+id/tv_movie_release_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/tv_movie_overview"
			android:layout_marginBottom="@dimen/activity_vertical_margin"
			android:layout_marginLeft="@dimen/activity_vertical_margin"
			android:layout_marginRight="@dimen/activity_vertical_margin"
			android:layout_toEndOf="@id/img_movie_poster"
			tools:text="Movie Release Date" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginStart="@dimen/activity_horizontal_margin"
			android:layout_toEndOf="@id/img_movie_poster"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btn_view_detail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/view_detail"
				android:textSize="12sp" />

			<Button
				android:id="@+id/btn_view_poster"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/view_poster"
				android:textSize="12sp" />
		</LinearLayout>
	</RelativeLayout>
</android.support.v7.widget.CardView>
